--- a/KeycloakProvider/KeycloakProvider.csproj
+++ b/KeycloakProvider/KeycloakProvider.csproj
@@ -4,20 +4,27 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>KeycloakProvider</AssemblyName>
+        <PackageId>KeycloakProvider</PackageId>
+        <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+        <Version>2023.5.11.0</Version>
+        <AssemblyVersion>$(Version)</AssemblyVersion>
+        <FileVersion>$(Version)</FileVersion>
+        <Description>API adapter for Keycloak 19+ REST API. MIT License</Description>
+        <Authors>Denis Balashov</Authors>
+        <RepositoryUrl>https://github.com/DBalashov/KeycloakProvider/</RepositoryUrl>
+        <Copyright>Denis Balashov</Copyright>
+        <PackageTags>C#, Keycloak, Api</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Compile Update="KeycloakProviderConfig.cs">
         <DependentUpon>KeycloakProvider.cs</DependentUpon>
       </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="*.nupkg" />
     </ItemGroup>
 
 </Project>
