--- a/KeycloakProvider/KeycloakProvider.csproj
+++ b/KeycloakProvider/KeycloakProvider.csproj
@@ -7,7 +7,7 @@
         <AssemblyName>KeycloakProvider</AssemblyName>
         <PackageId>KeycloakProvider</PackageId>
         <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-        <Version>2023.5.11.0</Version>
+        <Version>2023.5.21.0</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <FileVersion>$(Version)</FileVersion>
         <Description>API adapter for Keycloak 19+ REST API. MIT License</Description>
@@ -22,8 +22,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="KeycloakProviderConfig.cs">
-        <DependentUpon>KeycloakProvider.cs</DependentUpon>
+      <Compile Update="KeycloakProviderAdminConfig.cs">
+        <DependentUpon>KeycloakProviderAdmin.cs</DependentUpon>
+      </Compile>
+      <Compile Update="KeycloakProviderAuthConfig.cs">
+        <DependentUpon>KeycloakProviderAuth.cs</DependentUpon>
       </Compile>
     </ItemGroup>
 
