--- a/KeycloakProvider/KeycloakProvider.csproj
+++ b/KeycloakProvider/KeycloakProvider.csproj
@@ -33,4 +33,10 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\readme.md">
+        <Link>readme.md</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
